--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "bs-less ./"
+    "start": "bs-less ./"
   },
   "repository": {
     "type": "git",
